# practice

./: CMakeLists.txt  LICENSE  README.md  main  main.cpp
src/: CMakeLists.txt
src/Adder/: adder  adder.cpp
src/Boxclass/: Box.cpp  Box.h  CMakeLists.txt
src/Exception/: exception  exception.cpp  newexception
src/SIGNAL/: SIGNAL  SIGNAL.cpp
src/Shape/: CMakeLists.txt  Shape.cpp  Shape.h
src/Student/: Student  Student.cpp
src/WEBpro/: webweb.cpp
src/dynamicstore/: 2darray  2darray.cpp  3darray  3darray.cpp  dynamicobject  dynamicobject.cpp  store  store.cpp
src/filestream/: filestm
src/modeltemplate/: classtemplate  classtemplate.cpp  modeltemplate  modeltemplate.cpp
src/multiThread/: Thread2  Thread2.cpp  join_detach  join_detach.cpp  multi  multi.cpp  multiThread  multiThread.cpp  parameterthread  parameterthread.cpp  pth_create  pth_create.cpp
src/printData/: printdata  printdata.cpp
src/processMacro/: hong  hong.cpp  test.p
src/spacename/: spcenm  spcenm.cpp
test/: 3darray  3darray.cpp  Abstractshape  Abstractshape.cpp  practice.cpp  temp  usingcout  usingcout.cpp
